--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -8,7 +8,7 @@
         %option(value="z-a") Title: Z - A
         %option(value="rating") Rating
   %article.row
-    - @category.videos.each do |video|
+    - @category.recent_videos.each do |video|
       .video.col-md-2
         = link_to video_path(video) do 
           %img(src="#{video.small_cover_url}")
