--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -3,7 +3,7 @@
     %header
       %h3= link_to category.name, category_path(category)
     .videos.row
-      - @videos.each do |video|
+      - category.videos.each do |video|
         .video.col-sm-2
           = link_to video_path(video) do
             %img(src="#{video.small_cover_url}")
