--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -15,26 +15,15 @@
 %section.reviews.container
   .row
     .col-sm-10.col-sm-offset-1
-      %form
+      = bootstrap_form_for([@video, Review.new]) do |f|
         %fieldset
-          .form-group
-            %label Rate this video
-            .row
-              .col-sm-3
-                %select.form-control(name="")
-                  %option(value="5") 5 Stars
-                  %option(value="4") 4 Stars
-                  %option(value="3") 3 Stars
-                  %option(value="2") 2 Stars
-                  %option(value="1") 1 Star
-          .form-group
-            %label Write Review
-            .row
-              .col-sm-8
-                %textarea.form-control(name="" rows="6")
+          .row
+            .col-sm-3
+              = f.select :rating, options_for_select([["5 Stars", 5], ["4 Stars", 4], ["3 Stars", 3], ["2 Stars", 2], ["1 Star", 1]]), { label: "Rate this video" }, class: "col-sm-3 form-group" 
+              = f.text_area :content, label: "Write Review", rows: 6, class: "col-sm-3 form-group"
         %fieldset.form-group.actions.clearfix
-          %input(type="submit" value="Submit" class="btn")
-          %a(href="") Cancel
+          = f.submit "Submit", class: "btn btn-default"
+          = link_to "Cancel", @video
       %header
         %h3 User Reviews (#{@reviews.count})
       %ul
@@ -46,3 +35,4 @@
                 %p by <a href="">#{review.user.full_name}</a>
               .col-sm-8
                 %p= review.content
+
