--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -20,6 +20,8 @@
           .row
             .col-sm-3
               = f.select :rating, options_for_select([["5 Stars", 5], ["4 Stars", 4], ["3 Stars", 3], ["2 Stars", 2], ["1 Star", 1]]), { label: "Rate this video" }, class: "col-sm-3 form-group" 
+          .row
+            .col-sm-6
               = f.text_area :content, label: "Write Review", rows: 6, class: "col-sm-3 form-group"
         %fieldset.form-group.actions.clearfix
           = f.submit "Submit", class: "btn btn-default"
