--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -19,7 +19,7 @@
         %fieldset
           .row
             .col-sm-3
-              = f.select :rating, options_for_select([["5 Stars", 5], ["4 Stars", 4], ["3 Stars", 3], ["2 Stars", 2], ["1 Star", 1]]), { label: "Rate this video" }, class: "col-sm-3 form-group" 
+              = f.select :rating, options_for_video_reviews, { label: "Rate this video" }, class: "col-sm-3 form-group", include_blank: :true
           .row
             .col-sm-6
               = f.text_area :content, label: "Write Review", rows: 6, class: "col-sm-3 form-group"
