--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -8,5 +8,7 @@
           = f.email_field :email, label: "Email Address"
           = f.password_field :password
           = f.text_field :full_name, label: "Full Name"
+          = hidden_field_tag :invitation_token, @invitation_token
+          /* that way we don't hash invitation_token under user */
           = f.form_group do
             = f.submit "Sign Up"
