--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -15,3 +15,8 @@ section.ui-index
 fieldset.actions
   input[type="submit"]
     margin-right: 10px
+
+video
+  margin-left: auto
+  margin-right: auto
+  display: block
