--- a/app/views/admin/videos/new.html.haml
+++ b/app/views/admin/videos/new.html.haml
@@ -2,7 +2,7 @@
   .container
     .row
       .col-md-10.col-md-offset-1
-        = bootstrap_form_for([:admin, @video], html: {class: 'form-horizontal'}) do |f|
+        = bootstrap_form_for([:admin, @video], layout: :horizontal, label_col: "col-sm-3", control_col: "col-sm-6") do |f|
           %ul.nav.nav-tabs
             %li
               %a(href="") Recent Payments
@@ -11,21 +11,10 @@
           %br
           %fieldset
             = f.text_field :title, class: "col-sm-3"
-            .form-group
-              .col-sm-6
-                = f.select :category_ids, Category.all.map {|category| [category.name, category.id]}, { :prompt => "Please select:", label: "Categories" }, { :multiple => true, :size => 5 }
-              = f.text_area :description, rows: 8
-            .form-group
-              %label.control-label.col-sm-3 Large Cover
-              .col-sm-6
-                %col.btn.btn-file
-                  %input.form-control(type="file")
-            .form-group
-              %label.control-label.col-sm-3 Small Cover
-              .col-sm-6
-                %col.btn.btn-file
-                  %input.form-control(type="file")
-
-          %fieldset.actions.form-group
+            = f.select :category_ids, Category.all.map {|category| [category.name, category.id]}, { :prompt => "-Please select-", label: "Categories" }, { :multiple => true, :size => 5 }
+            = f.text_area :description, rows: 8
+            = f.file_field :large_cover, class: "btn btn-file"
+            = f.file_field :small_cover, class: "btn btn-file"
+            = f.text_field :video_url, class: "span3"
             .col-sm-6.col-md-offset-3
-              %input(type="submit" value="Add Video" class="btn btn-default")
+              = f.submit "Add Video"
